k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: microservices-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels: { app: products }
    spec:
      containers:
      - name: products
        image: products:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8000
