k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: microservices-demo
spec:
  selector:
    app: products
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
