k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  namespace: microservices-demo
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
